[gd_scene load_steps=6 format=3 uid="uid://3kbat82hiy2o"]

[ext_resource type="PackedScene" uid="uid://bcyrvic42ifeu" path="res://Scenes/Tiles/TileBase.tscn" id="1_r8d1m"]
[ext_resource type="Script" path="res://Scripts/Tiles/TileActivator.gd" id="2_87ril"]
[ext_resource type="Texture2D" uid="uid://b8itw3rpynp07" path="res://Assets/Sprites/Tiles/Tileset.png" id="3_oc24w"]

[sub_resource type="SpriteFrames" id="SpriteFrames_afemw"]
animations = [{
"frames": [],
"loop": false,
"name": &"Activate",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"Deactivate",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sxtpd"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 15.0
initial_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = -80.0
tangential_accel_max = 80.0

[node name="TileBase" instance=ExtResource("1_r8d1m")]
script = ExtResource("2_87ril")

[node name="Tile" parent="." index="1"]
texture = ExtResource("3_oc24w")
region_enabled = true
region_rect = Rect2(0, 0, 64, 32)

[node name="AnimatedTile" parent="." index="2"]
sprite_frames = SubResource("SpriteFrames_afemw")
animation = &"Activate"

[node name="GlowParticles" type="GPUParticles2D" parent="." index="3"]
modulate = Color(1, 0.607843, 0.301961, 1)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_sxtpd")
explosiveness = 0.04
randomness = 0.26

[connection signal="animation_finished" from="AnimatedTile" to="." method="_on_animated_tile_animation_finished"]
